--- a/config_example.ini
+++ b/config_example.ini
@@ -1,2 +1,12 @@
 [DJANGO]
 SECRET_KEY = abcdefghi1234567890
+
+[MONGO]
+IP = 0.0.0.0:0000
+DATABASE = mydatabase
+USERNAME = database_username
+PASSWORD = database_password
+
+[NETWORK]
+DEV_IP = 0.0.0.0
+PROD_IP = 0.0.0.0
