--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ config.ini
 readme_channels.txt
 server_ssh_putty.bat
 
+dash_kijiji/backend_scripts/
+!dash_kijiji/backend_scripts/stdout_intercept.py
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
